# nba-stats-openapi

./: .gitattributes  .gitignore  .redocly.yaml  LICENSE  README.md  justfile  nba_stats_api.json  openapi.json  openapi.yaml  pyproject.toml
.github/workflows/: publish.yml
data/: nba_api_spider_analysis.json
generator/: analysis.json  pyproject.toml
generator/nba_stats_generator/: generate_parameters.py
nba_stats_generator/: api_spider.py  generate_parameters.py  generate_schema.py
specification/: frontmatter.json  frontmatter.yaml
specification/data_sets/: ASTLeaders.json  ASTLeaders.yaml  AllTimeSeasonHigh.json  AssistLeaders.json  AssistTracker.json  AssistTracker.yaml  AssistedBy.json  AssistedBy.yaml  AssitedShotPlayerDashboard.json  AssitedShotTeamDashboard.json  AssitedShotTeamDashboard.yaml  Available.json  Available.yaml  AvailableSeasons.json  AvailableSeasons.yaml  AvailableVideo.json  AvailableVideo.yaml  AwayTeam.json  AwayTeam.yaml  BLKLeaders.json  BLKLeaders.yaml  BoxScoreSimilarityScores.json  BoxScoreSimilarityScores.yaml  ByActualMarginPlayerDashboard.json  ByHalfPlayerDashboard.json  ByHalfPlayerDashboard.yaml  ByPeriodPlayerDashboard.json  ByScoreMarginPlayerDashboard.json  ByYearPlayerDashboard.json  ByYearPlayerDashboard.yaml  CareerHighs.json  CareerLeadersByTeam.json  CareerLeadersByTeam.yaml  CareerTotalsAllStarSeason.json  CareerTotalsCollegeSeason.json  CareerTotalsCollegeSeason.yaml  CareerTotalsPostSeason.json  CareerTotalsPreseason.json  CareerTotalsPreseason.yaml  CareerTotalsRegularSeason.json  (+435 more)
(+846 files in other folders)
