[tool.poetry]
name = "nba_stats_generator"
version = "1.0.0"
description = "Generates OpenAPI Json files to document stats.nba.com"
authors = ["Abhi Agarwal <abhiaagarwal01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.41.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.1.15"
openapi-spec-validator = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
